<resources>

    <string name="login_lbl">請輸入帳號密碼登入</string>
    <string name="password_lbl">密碼</string>
    <string name="login">登入</string>
    <string name="app_name">帕金手環</string>
    <string name="title_home">主頁</string>
    <string name="title_dashboard">歷史</string>
    <string name="title_activity_historyclasss">歷史種類</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">第一段</string>
    <string name="second_fragment_label">第二段</string>
    <string name="next">下一個</string>
    <string name="previous">前一個</string>

    <string name="hello_first_fragment">你好 第一段</string>
    <string name="hello_second_fragment">你好 第二段. Arg: %1$s</string>
    <string name="title_activity_watch_history">觀看歷史</string>
    <string name="sure">確定</string>
    <string name="date">日期</string>
    <string name="sedate">選定日期:</string>
    <string name="result">結果</string>
    <string name="account_lbl">帳號</string>
    <string name="have">你擁有</string>
    <string name="probability">0%</string>
    <string name="have_parkin">的機會擁有\n帕金森氏症</string>
    <string name="next_step_check">請盡快聯繫\n專業的醫護人員\n來做更進一步的檢查</string>
    <string name="next_step_check_n">系統沒偵測到重大異常\n你擁有較低的機率\n罹患帕金森式症</string>
    <string name="have_pro">有異狀</string>
    <string name="havet_pro">無異狀</string>
    <string name="No_data">無資料</string>
    <string name="next_step_back">這天並沒有記錄存在\n請返回上一頁查找其他日期</string>
</resources>