<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="8dp" />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="622dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard"
        tools:layout_editor_absoluteX="0dp">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="301dp"
            android:layout_marginBottom="30dp" ></CalendarView>

        <TextView
            android:layout_width="179dp"
            android:layout_height="20dp"
            android:text="@string/sedate"
            android:layout_marginStart="35dp"
            android:textColor="#59bb9b"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/myDate"
            android:layout_width="179dp"
            android:layout_height="57dp"
            android:textColor="	#46A3FF"
            android:text="@string/date"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"

            android:textSize="23sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/sure"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="476dp" />

    </LinearLayout>


</LinearLayout>

